# BachelorThesis

./: README.md
PrintedDocumentLinkingSystem/: CMakeLists.txt
PrintedDocumentLinkingSystem/scripts/: install_PDVS_Dependencies_Ubuntu_16.04LTS.sh
PrintedDocumentLinkingSystem/src/: OCRTestApp.cpp  OCRTestApp.h  OCRTestApp_main.cpp  PDLS_main.cpp  PrintedDocumentLinkingSystem.cpp  PrintedDocumentLinkingSystem.h
PrintedDocumentLinkingSystem/src/ContentExtractionModule/: ContentExtractionModule.cpp  ContentExtractionModule.h  IExtractionStrategy.h
PrintedDocumentLinkingSystem/src/ContentExtractionModule/ImageExtraction/: OCRExtractor.cpp  OCRExtractor.h
PrintedDocumentLinkingSystem/src/ContentExtractionModule/PDFExtraction/: ImagePDFExtractor.cpp  ImagePDFExtractor.h  TextPDFExtractor.cpp  TextPDFExtractor.h
PrintedDocumentLinkingSystem/src/ContentExtractionModule/XMLExtraction/: XMLExtractor.cpp  XMLExtractor.h
PrintedDocumentLinkingSystem/src/ContentHashExtractionModule/: ContentHashExtractionModule.cpp  ContentHashExtractionModule.h  IContentHashExtractor.h  RegexCHashExtractor.cpp  RegexCHashExtractor.h
PrintedDocumentLinkingSystem/src/ContentHashGenerationModule/: ContentHashGenerationModule.cpp  ContentHashGenerationModule.h  IContentHashGenerator.h  OpenSSLContentHashGenerator.cpp  OpenSSLContentHashGenerator.h
PrintedDocumentLinkingSystem/src/ContentNormalizationModule/: ContentNormalizationModule.cpp  ContentNormalizationModule.h  INormalizationAlgorithm.h  RegexMatchReplacement.h  RegexNormalizationAlgorithm.cpp  RegexNormalizationAlgorithm.h
PrintedDocumentLinkingSystem/src/ContentValidationModule/: ContentValidationModule.cpp  ContentValidationModule.h
PrintedDocumentLinkingSystem/src/Datatypes/: Content.h  ContentHash.cpp  ContentHash.h  Document.cpp  Document.h  EnumTypes.h  File.cpp  File.h  Link.cpp  Link.h  LinkDescription.cpp  LinkDescription.h  LinkingData.cpp  LinkingData.h  NormalizedContent.h  PDLSException.h  RSAKey.h  Signature.h  X509Certificate.h
PrintedDocumentLinkingSystem/src/DocumentLinkingModule/: DocumentLinkingModule.cpp  DocumentLinkingModule.h
PrintedDocumentLinkingSystem/src/LDataLoadingModule/: LDataLoadingModule.cpp  LDataLoadingModule.h
PrintedDocumentLinkingSystem/src/LinkExtractionModule/: ILinkExtractor.h  LinkExtractionModule.cpp  LinkExtractionModule.h  QRCodeLinkExtractor.cpp  QRCodeLinkExtractor.h  TextLinkExtractor.cpp  TextLinkExtractor.h
PrintedDocumentLinkingSystem/src/LinkInjectionModule/: ILinkInjector.h  ImageInjector.cpp  ImageInjector.h  LinkInjectionModule.cpp  LinkInjectionModule.h  PDFInjector.cpp  PDFInjector.h  TextInjector.cpp  TextInjector.h  XMLInjector.cpp  XMLInjector.h
PrintedDocumentLinkingSystem/src/SignatureGenerationModule/: ISignatureGenerator.h  OpenSSLSignatureGenerator.cpp  OpenSSLSignatureGenerator.h  SignatureGenerationModule.cpp  SignatureGenerationModule.h
PrintedDocumentLinkingSystem/src/SignatureVerificationModule/: ICertificateValidator.h  ISignatureValidator.h  OpenSSLSelfSignedX509Validator.h  OpenSSLSignatureValidator.cpp  OpenSSLSignatureValidator.h  SignatureVerificationModule.cpp  SignatureVerificationModule.h
PrintedDocumentLinkingSystem/src/Util/: GhostScriptPDFManipulator.cpp  GhostScriptPDFManipulator.h  IImage2PDFConverter.h  IPDF2ImageConverter.h  IPDF2TextConverter.h  IPFSProvider.h  IProvider.h  OpenCVZXingBridgeSource.h  SimplePythonImage2PDFConverter.cpp  SimplePythonImage2PDFConverter.h
